--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food-Network</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+    <section class="header">
+        <div class="container">
+            <div class="half-width">
+                <h1>Easy Recipes, Healthy Eating Ideas and Chef Recipe</h1>
+                <p>Food.com has a massive collection of recipes that are submitted, rated and reviewed by people who are
+                    passionate about food. From international cuisines to quick and easy meal ideas, Food.com is where
+                    you can find what youre craving.</p>
+                <a class="button-link" target="_blank" href="www.google.com">Order Now</a>
+            </div>
+            <div class="half-width">
+                <img src="images/female/6667872_preview-removebg-preview.png" alt="">
+            </div>
+        </div>
+
+    </section>
+
 
 </body>
 
