added 2nd section

--- a/index.html
+++ b/index.html
@@ -11,25 +11,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <section class="header">
+    <section class="header-bg">
         <div class="container">
             <div class="half-width">
                 <h1>Easy Recipes, Healthy Eating Ideas and Chef Recipe</h1>
                 <p>Food.com has a massive collection of recipes that are submitted, rated and reviewed by people who are
                     passionate about food. From international cuisines to quick and easy meal ideas, Food.com is where
-                    you can find what youre craving.</p>
+                    you can find what youre craving.</p><br>
                 <a class="button-link" target="_blank" href="www.google.com">Order Now</a>
             </div>
             <div class="half-width">
                 <img src="images/female/6667872_preview-removebg-preview.png" alt="">
             </div>
         </div>
+    </section>
 
+    <section class="about-bg">
+        <div class="container">
+            <div class="half-width">
+                <img src="images/female/Person Image.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1>About Me</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus dicta corrupti facilis odio quos
+                    minima dolores voluptatum inventore hic maiores blanditiis, laudantium fugiat iusto esse corporis.
+                    Quod
+                    quisquam necessitatibus repellendus!
+                    Aperiam, quas ullam error quaerat debitis asperiores dicta iusto natus aut molestias esse quibusdam
+                    sint
+                    id quidem est eius accusamus exercitationem unde maxime adipisci, ipsum, fuga modi architecto! Illo,
+                    aliquid!</p><br>
+                <a class="button-link" target="_blank" href="https://www.linkedin.com/in/devzubair/">Contact Us</a>
+            </div>
+        </div>
     </section>
 
 
