added 3rd sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <section class="header-bg">
-        <div class="container">
+        <div class="flexiable-container">
             <div class="half-width">
                 <h1>Easy Recipes, Healthy Eating Ideas and Chef Recipe</h1>
                 <p>Food.com has a massive collection of recipes that are submitted, rated and reviewed by people who are
@@ -32,7 +32,7 @@
     </section>
 
     <section class="about-bg">
-        <div class="container">
+        <div class="flexiable-container">
             <div class="half-width">
                 <img src="images/female/Person Image.png" alt="">
             </div>
@@ -51,6 +51,43 @@
         </div>
     </section>
 
+    <section>
+        <div class="my-recipies">
+            <h1>My Recipies</h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores nostrum
+            tempore incidunt, odit corporis. Iste impedit minus ipsa aliquam facere maiores iure commodi non?
+        </div>
+
+        <div class="flexiable-container">
+            <div class="one-third">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores
+                    nostrum
+                </p>
+            </div>
+            <div class="one-third">
+                <img src="images/food/Project Cover.png" alt="">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores
+                    nostrum
+                </p>
+            </div>
+            <div class="one-third">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores
+                    nostrum
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer-bg">
+        <footer>
+            <h2>@2001 - Zubair Ahmed</h2>
+        </footer>
+    </section>
 
 </body>
 
