--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
     <section class="header-bg">
         <div class="flexiable-container">
             <div class="half-width">
-                <h1>Easy Recipes, Healthy Eating Ideas and Chef Recipe</h1>
+                <h1><span class="word-color">Easy Recipes,</span> Healthy Eating Ideas and Chef Recipe</h1>
                 <p>Food.com has a massive collection of recipes that are submitted, rated and reviewed by people who are
                     passionate about food. From international cuisines to quick and easy meal ideas, Food.com is where
                     you can find what youre craving.</p><br>
@@ -37,57 +38,125 @@
                 <img src="images/female/Person Image.png" alt="">
             </div>
             <div class="half-width">
-                <h1>About Me</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus dicta corrupti facilis odio quos
-                    minima dolores voluptatum inventore hic maiores blanditiis, laudantium fugiat iusto esse corporis.
-                    Quod
-                    quisquam necessitatibus repellendus!
-                    Aperiam, quas ullam error quaerat debitis asperiores dicta iusto natus aut molestias esse quibusdam
-                    sint
-                    id quidem est eius accusamus exercitationem unde maxime adipisci, ipsum, fuga modi architecto! Illo,
-                    aliquid!</p><br>
+                <h1><span class="word-color">About</span> Us</h1>
+                <h2>SERVING THE BEST SINCE 2020</h2>
+                <p>Located in Uttara, Dhaka Chronis Famous Sandwich Shop serves up the best burgers, sandwiches, and
+                    more to please your appetite, as well as your wallet. Everything is made fresh when you order it,
+                    and takeout is available. Call us today at 323-728-7806</p><br>
                 <a class="button-link" target="_blank" href="https://www.linkedin.com/in/devzubair/">Contact Us</a>
             </div>
         </div>
     </section>
 
-    <section>
+    <section class="recipies-bg">
         <div class="my-recipies">
-            <h1>My Recipies</h1>
+            <h1>My <span class="word-color">Recipies</span></h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores nostrum
             tempore incidunt, odit corporis. Iste impedit minus ipsa aliquam facere maiores iure commodi non?
         </div>
 
         <div class="flexiable-container">
             <div class="one-third">
-                <img src="images/food/Project Cover.jpg" alt="">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores
-                    nostrum
-                </p>
+                <img src="images/BBQ.jpg" alt="BBQ Photo">
+                <h2>BBQ Pork Tenderloin</h2>
+                <p>"This is an easy, no-brainer recipe. I throw this into the crock pot before work and come home to
+                    delicious goodness."</p>
             </div>
             <div class="one-third">
-                <img src="images/food/Project Cover.png" alt="">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores
-                    nostrum
-                </p>
+                <img src="images/Black Bean Burgers.jpg" alt="Black Bean Burgers photo">
+                <h2>Black Bean Burgers</h2>
+                <p>"These are the most delightful burgers — they're a snap to make, they taste great and they're even
+                    healthy!"</p>
             </div>
             <div class="one-third">
-                <img src="images/food/Project Cover1.jpg" alt="">
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores
-                    nostrum
-                </p>
+                <img src="images/Next-Level Burgers.jpg" alt="Next-Level Burgers photo">
+                <h2>Next-Level Burgers</h2>
+                <p>"The best burgers ever! The genius part of the recipe is the toppings and all of the unique flavors
+                    that they each bring."</p>
             </div>
         </div>
     </section>
 
-    <section class="footer-bg">
-        <footer>
-            <h2>@2001 - Zubair Ahmed</h2>
-        </footer>
+    <section>
+        <div class="my-recipies">
+            <h1>TASTE THE <span class="word-color">DIFFERENCE</span></h1>
+        </div>
+
+        <div class="flexiable-container">
+            <div class="one-third">
+                <img src="images/offer-5.jpg" alt="">
+            </div>
+            <div class="one-third">
+                <img src="images/offer-11.jpg" alt="">
+            </div>
+            <div class="one-third">
+                <img src="images/offer-7.jpg" alt="">
+            </div>
+        </div>
     </section>
+
+
+    <section class="eshop-bg">
+        <div class="flexiable-container">
+            <div class="half-width shop-text">
+                <h2>DOWNLOAD MOBILE APP AND</h2>
+                <h1>SAVE UP TO 20%</h1>
+                <a target="_blank" href="https://apps.apple.com/us/genre/mac/id39?mt=12"><img id="mac-app"
+                        class="half-width" src="images/appstore.png" alt="Mac store photo"></a>
+                <a target="_blank" href="https://play.google.com/store/apps"><img id="google-app" class="half-width"
+                        src="images/googleplay.png" alt="Gogole Play store photo">
+                </a>
+            </div>
+            <div class="half-width save-up">
+                <img src="images/e-shop.png" alt="Burger Package Image">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="location-bg">
+        <div class="my-recipies">
+            <h1>OUR <span class="word-color">LOCATIONS</span></h1>
+        </div>
+
+        <div class="flexiable-container">
+            <div class="our-location">
+                <img src="images/location-1.jpg" alt="">
+                <h2>DOWNTOWN</h2>
+                <h3>PHONE: 789-654-3210</h3>
+                <h3>Address</h3>
+                <h4>8721 M Central Avenue,<br>
+                    Los Angeles, CA 90036 <br>
+                    Daily 11AM - 10PM</h4>
+            </div>
+            <div class="our-location">
+                <img src="images/location-1.jpg" alt="">
+                <h2>DOWNTOWN</h2>
+                <h3>PHONE: 789-654-3210</h3>
+                <h3>Address</h3>
+                <h4>8721 M Central Avenue,<br>
+                    Los Angeles, CA 90036 <br>
+                    Daily 11AM - 10PM</h4>
+            </div>
+            <div class="our-location">
+                <img src="images/location-1.jpg" alt="">
+                <h2>DOWNTOWN</h2>
+                <h3>PHONE: 789-654-3210</h3>
+                <h3>Address</h3>
+                <h4>8721 M Central Avenue,<br>
+                    Los Angeles, CA 90036 <br>
+                    Daily 11AM - 10PM</h4>
+            </div>
+
+        </div>
+    </section>
+
+    <section class=" footer-bg">
+        <footer>
+            <img src="images/logo-01.png" alt="Logo Photo">
+            <h5><em>© 2020 Testo.</em>All Rights Reserved</h5>
+        </footer>
+        </>
 
 </body>
 
