changed recipies images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="about-bg">
         <div class="flexiable-container">
             <div class="half-width">
-                <img src="images/female/Person Image.png" alt="">
+                <img src="images/about us.png" alt="">
             </div>
             <div class="half-width">
                 <h1><span class="word-color">About</span> Us</h1>
@@ -50,7 +50,7 @@
 
     <section class="recipies-bg">
         <div class="my-recipies">
-            <h1>My <span class="word-color">Recipies</span></h1>
+            <h1>Our <span class="word-color">Recipies</span></h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores nostrum
             tempore incidunt, odit corporis. Iste impedit minus ipsa aliquam facere maiores iure commodi non?
         </div>
@@ -63,14 +63,14 @@
                     delicious goodness."</p>
             </div>
             <div class="one-third">
-                <img src="images/Black Bean Burgers.jpg" alt="Black Bean Burgers photo">
-                <h2>Black Bean Burgers</h2>
-                <p>"These are the most delightful burgers — they're a snap to make, they taste great and they're even
-                    healthy!"</p>
+                <img src="images/Frito Corn Salad.jpg" alt="Frito Corn Salad photo">
+                <h2>Frito Corn Salad</h2>
+                <p>"So simple, but so good. I was looking for something other than potato salad or coleslaw to serve at
+                    a BBQ, and was very happy I tried this recipe."</p>
             </div>
             <div class="one-third">
-                <img src="images/Next-Level Burgers.jpg" alt="Next-Level Burgers photo">
-                <h2>Next-Level Burgers</h2>
+                <img src="images/Loaded Baked Potato Salad.png" alt="Loaded Baked Potato Salad photo">
+                <h2>Loaded Baked Potato Salad</h2>
                 <p>"The best burgers ever! The genius part of the recipe is the toppings and all of the unique flavors
                     that they each bring."</p>
             </div>
@@ -106,6 +106,7 @@
                 <a target="_blank" href="https://play.google.com/store/apps"><img id="google-app" class="half-width"
                         src="images/googleplay.png" alt="Gogole Play store photo">
                 </a>
+
             </div>
             <div class="half-width save-up">
                 <img src="images/e-shop.png" alt="Burger Package Image">
