--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
     <section class="header-bg">
         <div class="flexiable-container">
             <div class="half-width">
-                <h1><span class="word-color">Easy Recipes,</span> Healthy Eating Ideas and Chef Recipe</h1>
-                <p>Food.com has a massive collection of recipes that are submitted, rated and reviewed by people who are
-                    passionate about food. From international cuisines to quick and easy meal ideas, Food.com is where
+                <h1><span class="word-color">Testo Burger,</span> the best burgers, sandwiches, and
+                    more</h1>
+                <p><b>Testo Burger</b> has a massive collection of recipes that are submitted, rated and reviewed by
+                    people who
+                    are
+                    passionate about food. From international cuisines to quick and easy meal ideas, <b>Testo Burger</b>
+                    is
+                    where
                     you can find what youre craving.</p><br>
-                <a class="button-link" target="_blank" href="www.google.com">Order Now</a>
+                <a class="button-link" target="_blank" href="https://www.foodpanda.com.bd/">Order Now</a>
             </div>
             <div class="half-width">
-                <img src="images/female/6667872_preview-removebg-preview.png" alt="">
+                <img src="images/header-right.png" alt="">
             </div>
         </div>
     </section>
@@ -40,9 +45,9 @@
             <div class="half-width">
                 <h1><span class="word-color">About</span> Us</h1>
                 <h2>SERVING THE BEST SINCE 2020</h2>
-                <p>Located in Uttara, Dhaka Chronis Famous Sandwich Shop serves up the best burgers, sandwiches, and
+                <p>Located in Uttara, Dhaka - Famous Food Shop serves up the best burgers, sandwiches, and
                     more to please your appetite, as well as your wallet. Everything is made fresh when you order it,
-                    and takeout is available. Call us today at 323-728-7806</p><br>
+                    and takeout is available. Call us today at <b>+880-1619-141476</b></p><br>
                 <a class="button-link" target="_blank" href="https://www.linkedin.com/in/devzubair/">Contact Us</a>
             </div>
         </div>
@@ -51,8 +56,8 @@
     <section class="recipies-bg">
         <div class="my-recipies">
             <h1>Our <span class="word-color">Recipies</span></h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam saepe sit dicta eos eaque maiores nostrum
-            tempore incidunt, odit corporis. Iste impedit minus ipsa aliquam facere maiores iure commodi non?
+            Quality is our promise and our recipe. Always Fresh. We serve 100% pure North American beef. We believe this
+            is why our hamburgers taste better
         </div>
 
         <div class="flexiable-container">
@@ -77,30 +82,11 @@
         </div>
     </section>
 
-    <section>
-        <div class="my-recipies">
-            <h1>TASTE THE <span class="word-color">DIFFERENCE</span></h1>
-        </div>
-
-        <div class="flexiable-container">
-            <div class="one-third">
-                <img src="images/offer-5.jpg" alt="">
-            </div>
-            <div class="one-third">
-                <img src="images/offer-11.jpg" alt="">
-            </div>
-            <div class="one-third">
-                <img src="images/offer-7.jpg" alt="">
-            </div>
-        </div>
-    </section>
-
-
     <section class="eshop-bg">
         <div class="flexiable-container">
             <div class="half-width shop-text">
-                <h2>DOWNLOAD MOBILE APP AND</h2>
-                <h1>SAVE UP TO 20%</h1>
+                <h3>DOWNLOAD MOBILE APP AND</h3>
+                <h2>SAVE UP TO 20%</h2>
                 <a target="_blank" href="https://apps.apple.com/us/genre/mac/id39?mt=12"><img id="mac-app"
                         class="half-width" src="images/appstore.png" alt="Mac store photo"></a>
                 <a target="_blank" href="https://play.google.com/store/apps"><img id="google-app" class="half-width"
@@ -114,48 +100,31 @@
         </div>
     </section>
 
-
-    <section class="location-bg">
-        <div class="my-recipies">
-            <h1>OUR <span class="word-color">LOCATIONS</span></h1>
+    <section class="order-bg">
+        <div class="my-recipies footer-bg">
+            <h2>WE GUARANTEE</h2>
+            <h1><span class="word-color">30 MINUTES</span> DELIVERY!</h1>
+            <a class="delivery-btn" href="tel:+8801619141476">Call: 01619141476</a>
         </div>
-
         <div class="flexiable-container">
-            <div class="our-location">
-                <img src="images/location-1.jpg" alt="">
-                <h2>DOWNTOWN</h2>
-                <h3>PHONE: 789-654-3210</h3>
-                <h3>Address</h3>
-                <h4>8721 M Central Avenue,<br>
-                    Los Angeles, CA 90036 <br>
-                    Daily 11AM - 10PM</h4>
+            <div class="one-third my-card">
+                <img src="images/offer-5.jpg" alt="Offer 1 image">
             </div>
-            <div class="our-location">
-                <img src="images/location-1.jpg" alt="">
-                <h2>DOWNTOWN</h2>
-                <h3>PHONE: 789-654-3210</h3>
-                <h3>Address</h3>
-                <h4>8721 M Central Avenue,<br>
-                    Los Angeles, CA 90036 <br>
-                    Daily 11AM - 10PM</h4>
+            <div class="one-third my-card">
+                <img src="images/offer-11.jpg" alt="Offer Image 2">
             </div>
-            <div class="our-location">
-                <img src="images/location-1.jpg" alt="">
-                <h2>DOWNTOWN</h2>
-                <h3>PHONE: 789-654-3210</h3>
-                <h3>Address</h3>
-                <h4>8721 M Central Avenue,<br>
-                    Los Angeles, CA 90036 <br>
-                    Daily 11AM - 10PM</h4>
+            <div class="one-third my-card">
+                <img src="images/offer-7.jpg" alt="Offer Image 3">
             </div>
-
         </div>
+
     </section>
 
     <section class=" footer-bg">
         <footer>
             <img src="images/logo-01.png" alt="Logo Photo">
-            <h5><em>© 2020 Testo.</em>All Rights Reserved</h5>
+            <h5><em>© 2020 Testo Burger </em> | All Rights Reserved | <a
+                    href="https://www.linkedin.com/in/devzubair/">Develope by DZ</a></h5>
         </footer>
         </>
 
