add comment in html section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+    <!-- HEADER SECTION-->
+
     <section class="header-bg">
         <div class="flexiable-container">
             <div class="half-width">
@@ -37,6 +39,8 @@
         </div>
     </section>
 
+    <!-- ABOUT US SECTION-->
+
     <section class="about-bg">
         <div class="flexiable-container">
             <div class="half-width">
@@ -52,6 +56,9 @@
             </div>
         </div>
     </section>
+
+
+    <!-- OUR RECIPIES SECTION -->
 
     <section class="recipies-bg">
         <div class="my-recipies">
@@ -82,6 +89,8 @@
         </div>
     </section>
 
+    <!-- APPS DOWNLOAD SECTION-->
+
     <section class="eshop-bg">
         <div class="flexiable-container">
             <div class="half-width shop-text">
@@ -99,6 +108,8 @@
             </div>
         </div>
     </section>
+
+    <!--30 MIN DELIVERY SECTION -->
 
     <section class="order-bg">
         <div class="my-recipies footer-bg">
@@ -119,6 +130,8 @@
         </div>
 
     </section>
+
+    <!-- FOOTER SECTION-->
 
     <section class=" footer-bg">
         <footer>
