little bit change

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class=" footer-bg">
         <footer>
             <img src="images/logo-01.png" alt="Logo Photo">
-            <h5><em>© 2020 Testo Burger </em> | All Rights Reserved | <a
+            <h5><em>© 2020 Testo Burger </em> | All Rights Reserved | <a target="_blank"
                     href="https://www.linkedin.com/in/devzubair/">Develope by DZ</a></h5>
         </footer>
 
